# mySnooker-sfml

./: CMakeLists.txt  README.md  main.cpp
headers/: ball.h  game.h  network.h  renderer.h
sources/: ball.cpp  game.cpp  network.cpp  renderer.cpp
